<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_local_movies_24"
        android:title="@string/title_movie" />
    <item
        android:id="@+id/navigation_tv"
        android:icon="@drawable/ic_live_tv_24"
        android:title="@string/title_tv" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_celeb"
        android:icon="@drawable/ic_person_24"
        android:title="@string/title_celeb" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/title_setting" />
</menu>