<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="io.github.pouyarezaei.movie.ui.movie.MovieFragment"
        android:label="@string/title_movie"
        tools:layout="@layout/movie_fragment" />
    <fragment
        android:id="@+id/navigation_tv"
        android:name="io.github.pouyarezaei.tv.ui.tv.TvFragment"
        android:label="@string/title_tv"
        tools:layout="@layout/tv_fragment" />
    <fragment
        android:id="@+id/navigation_search"
        android:name="io.github.pouyarezaei.search.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_celeb"
        android:name="io.github.pouyarezaei.celebrity.ui.celebrity.CelebrityFragment"
        android:label="@string/title_celeb"
        tools:layout="@layout/celebrity_fragment" />
    <fragment
        android:id="@+id/navigation_setting"
        android:name="io.github.pouyarezaei.setting.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>